src/objects/FR_Metadata__mdt.object
<CustomObject>
    <description>Metadata that needs to be sent for Salesforce</description>
    <fields>
        <fullName>AACR_Fellow__c</fullName>
        <label>AACR Fellow</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AACR_ID__c</fullName>
        <label>AACR ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Number__c</fullName>
        <label>Alternate Phone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSCR__c</fullName>
        <label>BSCR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICR__c</fullName>
        <label>CICR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIMM__c</fullName>
        <label>CIMM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Degree_s_Conferred__c</fullName>
        <label>Current Degree(s) Conferred</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Title__c</fullName>
        <label>Current Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_City__c</fullName>
        <label>Home Address City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_Country__c</fullName>
        <label>Home Address Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_Line_1__c</fullName>
        <label>Home Address Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_State__c</fullName>
        <label>Home Address State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_ZIP__c</fullName>
        <label>Home Address ZIP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Email_Address__c</fullName>
        <label>Home Email Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Name__c</fullName>
        <label>Institution Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <label>Institution Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_iMIS_ID__c</fullName>
        <label>Institution iMIS ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional_Address_City__c</fullName>
        <label>Institutional Address City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional_Address_Country__c</fullName>
        <label>Institutional Address Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional_Address_Line_1__c</fullName>
        <label>Institutional Address Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional_Address_State__c</fullName>
        <label>Institutional Address State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional_Address_ZIP__c</fullName>
        <label>Institutional Address ZIP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional_Email_Address__c</fullName>
        <label>Institutional Email Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional_Telephone_Number__c</fullName>
        <label>Institutional Telephone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEG__c</fullName>
        <label>MEG</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <label>Membership Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCWG__c</fullName>
        <label>PCWG</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Direct_Telephone_Number__c</fullName>
        <label>Preferred Direct Telephone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <description>Store metadata field ID for Prefix</description>
        <label>Prefix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Major_Program__c</fullName>
        <label>Primary Major Program</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <label>RSM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity__c</fullName>
        <label>Race/Ethnicity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Store metadata field id for Suffix</description>
        <label>Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TME__c</fullName>
        <label>TME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WICR__c</fullName>
        <label>WICR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iMIS_ID__c</fullName>
        <label>iMIS ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>FR_Metadata</label>
    <pluralLabel>FR_Metadata</pluralLabel>
</CustomObject>